# bloglite-api-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  TODO.md
bins/bloglite/: Cargo.toml
bins/bloglite/.cargo/: config.toml.example
bins/bloglite/benches/: bench.rs
bins/bloglite/sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql  02-insert-categories.sql
bins/bloglite/sql/prod_initial/: create-schema.sql
bins/bloglite/src/: lib.rs  main.rs  refresh_token.rs
bins/bloglite/src/adapter/http/: mod.rs
bins/bloglite/src/adapter/http/middleware/: mod.rs
bins/bloglite/src/adapter/http/routes/admin/: articles_cmd.rs  articles_query.rs  mod.rs
bins/bloglite/src/adapter/http/routes/api/: articles.rs  mod.rs
bins/bloglite/src/adapter/http/routes/auth/: mod.rs
bins/bloglite/src/application/: auth.rs  error.rs  mod.rs
bins/bloglite/src/application/command_handlers/: create_article.rs  delete_article.rs  mod.rs  revert_article_content.rs  set_article_category.rs  set_article_state.rs  update_article_content.rs
bins/bloglite/src/application/query_handlers/: get_all_categories.rs  get_all_tags.rs  get_article.rs  mod.rs  search_articles.rs
bins/bloglite/src/config/: auth.rs  mod.rs
bins/bloglite/src/domain/: categories.rs  mod.rs
bins/bloglite/src/domain/articles/: error.rs  events.rs  mod.rs  repository.rs  version.rs
bins/bloglite/src/domain/articles/content/: error.rs  mod.rs  validators.rs
bins/bloglite/src/infra/: mod.rs
bins/bloglite/src/infra/domain/: article_content_hasher.rs  article_content_parser.rs  mod.rs
bins/bloglite/src/infra/domain/article_content_render/: github.rs  local.rs  mod.rs
bins/bloglite/src/infra/domain/article_repository/: mod.rs  model.rs
bins/bloglite/src/infra/domain/category_repository/: mod.rs
bins/bloglite/src/infra/outbox/: error.rs  fetch.rs  mod.rs
bins/bloglite/src/infra/policy/: domain_aggregate_delete.rs  error.rs  mod.rs  readmodel_update.rs
bins/bloglite/src/infra/readmodel/: article_versions.rs  articles.rs  mod.rs
libs/lib-api/: Cargo.toml
libs/lib-api/src/: error.rs  lib.rs  result.rs  success.rs
libs/lib-api/src/extract/: json.rs  mod.rs  wrap_rejection.rs
libs/lib-cqrs/: Cargo.toml
libs/lib-cqrs/src/: lib.rs
libs/lib-db/: Cargo.toml
libs/lib-db/src/: db.rs  error.rs  lib.rs  table.rs
libs/lib-utils/: Cargo.toml
libs/lib-utils/src/: consts.rs  lib.rs  pagination.rs
libs/pubsub/: Cargo.toml
libs/pubsub/macros/: Cargo.toml
libs/pubsub/macros/src/: lib.rs
libs/pubsub/src/: bus.rs  error.rs  lib.rs  message.rs  pubsub.rs  router.rs  topics.rs  traits.rs
